fix placeholder text
jesus christ this took me way too long

--- a/css/login-css.css
+++ b/css/login-css.css
@@ -73,10 +73,18 @@ body .login__group__input {
   line-height: 50px;
   padding: 12px 18px 0;
 }
-body .login__group__input:focus + .login__group__label + .output_label {
+body .login__group__input:focus + .login__group__label {
   top: 15px;
   font-size: 0.7rem;
 }
+
+body .login__group__input:not(:placeholder-shown) + .login__group__label {
+
+  top: 15px;
+  font-size: 0.7rem;
+
+}
+
 body .login__sign-in {
   margin: 24px 0 12px;
   padding: 16px;
